<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/keywordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keyword"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="7dp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/errKeywordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_mandatory_field"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/keywordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_keyword"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="87dp" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category_array"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="118dp" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_in_miles"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="151dp" />

        <EditText
            android:id="@+id/distanceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_distance_default_10_miles"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="177dp" />

        <TextView
            android:id="@+id/fromTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="229dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/currentLocationRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/current_location"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="255dp"
                android:onClick="setAutoComplete" />

            <RadioButton
                android:id="@+id/otherLocationRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other_specify_location"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="287dp"
                android:onClick="setAutoComplete" />

        </RadioGroup>

        <TextView
            android:id="@+id/errOtherLocationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/please_enter_mandatory_field"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:visibility="gone" />

        <AutoCompleteTextView
            android:id="@+id/otherLocationAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/type_in_the_location"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="324dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="validateForm"
                android:text="@string/search"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="378dp" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clearForm"
                android:text="@string/clear"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="378dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>