<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Details">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fromTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from" />

        <AutoCompleteTextView
            android:id="@+id/fromAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_in_the_location"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/travelModeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/travel_mode" />

        <Spinner
            android:id="@+id/travelModeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/travel_mode_array" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>