<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/addressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addressValue"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/address"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:scrollHorizontally="true"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone"
                android:gravity="center_vertical"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneValue"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/phone"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/priceLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:gravity="center_vertical"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceValue"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/price"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ratingsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ratings"
                android:gravity="center_vertical"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ratings"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingValue"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ratings"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:max="5"
                android:stepSize="0.1" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/googlePageLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/googlePage"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/googlePage"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/googlePageValue"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/googlePage"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/websiteLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/website"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/website"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/websiteValue"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/website"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_weight="1" />

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>